--- a/profile.html
+++ b/profile.html
@@ -70,7 +70,7 @@
 
           <div class="flex items-center space-x-4">
             <!-- Keranjang -->
-            <a href="cart.html">
+            <a href="cart.php">
               <img
                 src="./assets/img/cart.png"
                 alt="Cart"
