--- a/explore.html
+++ b/explore.html
@@ -36,7 +36,8 @@
 
               <!-- Keranjang + Auth Area -->
               <div class="flex items-center space-x-5">
-                <a href="cart.html" class="hover:opacity-80 transition">
+                <!-- KERANJANG (hanya muncul jika SUDAH login) -->
+                <a href="cart.php" id="cart-link" class="hidden hover:opacity-80 transition">
                   <img src="./assets/img/cart.png" alt="Cart" class="h-6 w-6" />
                 </a>
 
