--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <!-- Keranjang + Auth Area -->
             <div class="flex items-center space-x-5">
               <!-- KERANJANG (hanya muncul jika SUDAH login) -->
-              <a href="cart.html" id="cart-link" class="hidden hover:opacity-80 transition">
+              <a href="cart.php" id="cart-link" class="hidden hover:opacity-80 transition">
                 <img src="./assets/img/cart.png" alt="Cart" class="h-6 w-6" />
               </a>
 
