--- a/index.html
+++ b/index.html
@@ -129,179 +129,12 @@
           </p>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <!-- Product Card 1 -->
-          <div
-            class="product-card bg-white rounded-xl shadow-md overflow-hidden"
-          >
-            <div class="relative">
-              <img
-                src="./assets/img/Jaket Bommer Bahan Suede.png"
-                alt="Product"
-                class="w-full h-64 object-cover"
-              />
-              <span class="badge-promo absolute top-4 right-4">Promo 20%</span>
-            </div>
-            <div class="p-5">
-              <p class="text-gray-500 text-sm mb-1">Fashion</p>
-              <h3 class="font-bold text-gray-800 mb-2">
-                Jaket Bommer Bahan Suede
-              </h3>
-              <p class="text-2xl font-bold text-purple-600 mb-3">Rp 578.000</p>
-              <p class="text-gray-400 text-sm line-through mb-4">
-                Est. dari Rp. Rp 750.000
-              </p>
-              <button
-                class="w-full primary-color text-white py-3 rounded-lg font-semibold hover:opacity-90"
-              >
-                Beli Sekarang
-              </button>
-            </div>
-          </div>
-
-          <!-- Product Card 2 -->
-          <div
-            class="product-card bg-white rounded-xl shadow-md overflow-hidden">
-            <div class="relative">
-              <img
-                src="assets/img/Nike Air Max Dn8 SE.png"
-                alt="Product"
-                class="w-full h-64 object-cover"
-              />
-              <span class="badge-promo absolute top-4 right-4">Promo 15%</span>
-            </div>
-            <div class="p-5">
-              <p class="text-gray-500 text-sm mb-1">Footwear</p>
-              <h3 class="font-bold text-gray-800 mb-2">Nike Air Max Dn8 SE</h3>
-              <p class="text-2xl font-bold text-purple-600 mb-3">
-                Rp 1.250.000
-              </p>
-              <p class="text-gray-400 text-sm line-through mb-4">
-                Est. dari Rp. Rp 1.500.000
-              </p>
-              <button
-                class="w-full primary-color text-white py-3 rounded-lg font-semibold hover:opacity-90">
-                Beli Sekarang
-              </button>
-            </div>
-          </div>
-
-          <!-- Product Card 3 -->
-          <div
-            class="product-card bg-white rounded-xl shadow-md overflow-hidden"
-          >
-            <div class="relative">
-              <img
-                src="./assets/img/Make Over.png"
-                alt="Product"
-                class="w-full h-64 object-cover"
-              />
-              <span class="badge-promo absolute top-4 right-4">Promo 25%</span>
-            </div>
-            <div class="p-5">
-              <p class="text-gray-500 text-sm mb-1">Kosmetik</p>
-              <h3 class="font-bold text-gray-800 mb-2">Make Over Face Contour Kit 14 g</h3>
-              <p class="text-2xl font-bold text-purple-600 mb-3">Rp 350.000</p>
-              <p class="text-gray-400 text-sm line-through mb-4">
-                Est. dari Rp. Rp 470.000
-              </p>
-              <button
-                class="w-full primary-color text-white py-3 rounded-lg font-semibold hover:opacity-90"
-              >
-                Beli Sekarang
-              </button>
-            </div>
-          </div>
-
-          <!-- Product Card 4 -->
-          <div
-            class="product-card bg-white rounded-xl shadow-md overflow-hidden"
-          >
-            <div class="relative">
-              <img
-                src="./assets/img/jam.png"
-                alt="Product"
-                class="w-full h-64 object-cover"
-              />
-              <span class="badge-promo absolute top-4 right-4">Promo 30%</span>
-            </div>
-            <div class="p-5">
-              <p class="text-gray-500 text-sm mb-1">Aksesoris</p>
-              <h3 class="font-bold text-gray-800 mb-2">
-                Classic Leather Watch
-              </h3>
-              <p class="text-2xl font-bold text-purple-600 mb-3">
-                Rp 1.155.000.000
-              </p>
-              <p class="text-gray-400 text-sm line-through mb-4">
-                Est. dari Rp. Rp 2.650.000.000
-              </p>
-              <button
-                class="w-full primary-color text-white py-3 rounded-lg font-semibold hover:opacity-90"
-              >
-                Beli Sekarang
-              </button>
-            </div>
-          </div>
-
-          <!-- Product Card 5 -->
-          <div
-            class="product-card bg-white rounded-xl shadow-md overflow-hidden"
-          >
-            <div class="relative">
-              <img
-                src="./assets/img/Tas Hermes.png"
-                alt="Product"
-                class="w-full h-64 object-cover"
-              />
-              <span class="badge-promo absolute top-4 right-4">Promo 18%</span>
-            </div>
-            <div class="p-5">
-              <p class="text-gray-500 text-sm mb-1">Fashion</p>
-              <h3 class="font-bold text-gray-800 mb-2">Tas Hermes</h3>
-              <p class="text-2xl font-bold text-purple-600 mb-3">
-                Rp 1.575.000
-              </p>
-              <p class="text-gray-400 text-sm line-through mb-4">
-                Est. dari Rp. Rp 1.920.000
-              </p>
-              <button
-                class="w-full primary-color text-white py-3 rounded-lg font-semibold hover:opacity-90"
-              >
-                Beli Sekarang
-              </button>
-            </div>
-          </div>
-
-          <!-- Product Card 6 -->
-          <div
-            class="product-card bg-white rounded-xl shadow-md overflow-hidden"
-          >
-            <div class="relative">
-              <img
-                src="./assets/img/Kacamata.png"
-                alt="Product"
-                class="w-full h-64 object-cover"
-              />
-              <span class="badge-promo absolute top-4 right-4">Promo 40%</span>
-            </div>
-            <div class="p-5">
-              <p class="text-gray-500 text-sm mb-1">Aksesoris</p>
-              <h3 class="font-bold text-gray-800 mb-2">Zalora Evernoon</h3>
-              <p class="text-2xl font-bold text-purple-600 mb-3">
-                Rp 1.650.000
-              </p>
-              <p class="text-gray-400 text-sm line-through mb-4">
-                Est. dari Rp. Rp 2.750.000
-              </p>
-              <button
-                class="w-full primary-color text-white py-3 rounded-lg font-semibold hover:opacity-90"
-              >
-                Beli Sekarang
-              </button>
-            </div>
-          </div>
-        </div>
+        <div id="promo-grid" class="grid grid-cols-1 md:grid-cols-3 gap-8">
+  <!-- Products akan dimuat dari JavaScript -->
+  <div class="col-span-3 text-center py-8">
+    <p class="text-gray-500">Memuat promo...</p>
+  </div>
+</div>
       </div>
     </section>
 
