--- a/editProduk.html
+++ b/editProduk.html
@@ -155,15 +155,6 @@
                 </button>
             </a>
             
-          <div class="flex items-center space-x-4">
-            <!-- PROFILE -->
-            <a href="profile.html"><img  
-              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=300&h=300&fit=crop" 
-              alt="Profile" 
-              class="h-10 w-10 rounded-full object-cover border hover:opacity-90 cursor-pointer"/>
-            </a>
-            
-             </div>
           </div>
         </div>
       </div>
@@ -259,12 +250,12 @@
                 <!-- Stok dan Kategori -->
                 <div class="grid grid-cols-2 gap-6 mb-6">
                     <div>
-                        <label class="block text-gray-800 font-semibold mb-3">Stok Barang</label>
+                        <label class="block text-gray-800 font-semibold mb-3">Kuota Barang</label>
                         <div class="stock-input-group">
                             <input type="number" id="stock" class="w-full px-4 py-3 pr-14 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent bg-gray-50">
                             <div class="stock-btn" onclick="increaseStock()">+1</div>
                         </div>
-                        <p class="text-gray-500 text-sm mt-2">Klik tombol +1 untuk menambah stok dengan cepat</p>
+                        <p class="text-gray-500 text-sm mt-2">Klik tombol +1 untuk menambah kuota dengan cepat</p>
                     </div>
                     <div>
                         <label class="block text-gray-800 font-semibold mb-3">Kategori</label>
@@ -711,7 +702,7 @@ if (fileInput) {
                 const stock = parseInt(document.getElementById('stock').value) || 0;
 
                 if (!name || price <= 0 || stock < 0) {
-                    alert('Pastikan Nama Produk, Harga, dan Stok diisi dengan benar.');
+                    alert('Pastikan Nama Produk, Harga, dan Kuota diisi dengan benar.');
                     return;
                 }
 
