--- a/uploadProduk.html
+++ b/uploadProduk.html
@@ -112,15 +112,6 @@
                 </button>
             </a>
             
-          <div class="flex items-center space-x-4">
-            <!-- PROFILE -->
-            <a href="profile.html"><img  
-              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=300&h=300&fit=crop" 
-              alt="Profile" 
-              class="h-10 w-10 rounded-full object-cover border hover:opacity-90 cursor-pointer"/>
-            </a>
-            
-             </div>
           </div>
         </div>
       </div>
@@ -216,7 +207,7 @@
                 <!-- Stok dan Kategori -->
                 <div class="grid grid-cols-2 gap-6 mb-6">
                     <div>
-                        <label class="block text-gray-800 font-semibold mb-3">Stok Barang</label>
+                        <label class="block text-gray-800 font-semibold mb-3">Kuota Barang</label>
                         <input type="number" id="stock" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent" placeholder="10">
                     </div>
                     <div>
