--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="text-center mb-12">
           <h2 class="text-3xl font-bold text-gray-800 mb-2">
             <img 
-              src="/assets/img/discount.png" 
+              src="assets/img/discount.png" 
               alt="promo icon" 
               class="w-8 h-8 inline-block"
             >
