--- a/homeSeller.html
+++ b/homeSeller.html
@@ -182,17 +182,39 @@
             </div>
         </div>
 
-        <!-- Order Section (Hidden by default) -->
-        <div id="content-order" class="hidden">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6">Order Masuk</h2>
-            <div class="bg-white rounded-2xl shadow-sm p-8 text-center">
-                <svg class="w-20 h-20 text-gray-300 mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path>
-                </svg>
-                <p class="text-gray-600 text-lg">Belum ada order masuk</p>
-            </div>
+<!-- Order Section (Hidden by default) -->
+<div id="content-order" class="hidden">
+    <div class="mb-6">
+        <h2 class="text-2xl font-bold text-gray-900 mb-4">Order Masuk</h2>
+        
+        <!-- Filter Status Shipping -->
+        <div class="flex space-x-2 mb-6">
+            <button onclick="loadOrders('all')" class="px-4 py-2 bg-gray-200 hover:bg-gray-300 rounded-lg font-medium text-gray-700 transition">
+                Semua Order
+            </button>
+            <button onclick="loadOrders('pending')" class="px-4 py-2 bg-yellow-100 hover:bg-yellow-200 text-yellow-700 rounded-lg font-medium transition">
+                🕐 Menunggu Diproses
+            </button>
+            <button onclick="loadOrders('processing')" class="px-4 py-2 bg-purple-100 hover:bg-purple-200 text-purple-700 rounded-lg font-medium transition">
+                🎁 Dibungkus
+            </button>
+            <button onclick="loadOrders('shipped')" class="px-4 py-2 bg-indigo-100 hover:bg-indigo-200 text-indigo-700 rounded-lg font-medium transition">
+                🚚 Dikirim
+            </button>
+            <button onclick="loadOrders('delivered')" class="px-4 py-2 bg-blue-100 hover:bg-blue-200 text-blue-700 rounded-lg font-medium transition">
+                📦 Sampai
+            </button>
+            <button onclick="loadOrders('completed')" class="px-4 py-2 bg-green-100 hover:bg-green-200 text-green-700 rounded-lg font-medium transition">
+                ✅ Selesai
+            </button>
         </div>
-
+    </div>
+    
+    <!-- Orders Container -->
+    <div id="orders-container">
+        <!-- Orders will be loaded here -->
+    </div>
+</div>
         <!-- Statistik Section (Hidden by default) -->
         <div id="content-statistik" class="hidden">
             <h2 class="text-2xl font-bold text-gray-900 mb-6">Statistik Toko</h2>
