--- a/about.html
+++ b/about.html
@@ -238,114 +238,66 @@
           Kenalan diri kami orang-orang di balik Promora
         </p>
 
-        <div class="grid md:grid-cols-4 gap-8">
+        <div class="grid md:grid-cols-3 gap-8">
           <!-- Team Member 1 -->
-          <div class="text-center team-card">
-            <div class="mb-4">
-              <img
-                src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=300&h=300&fit=crop"
-                alt="Sarah Amanda"
-                class="w-32 h-32 rounded-full mx-auto object-cover border-4 border-purple-100"
-              />
-            </div>
-            <h3 class="text-xl font-bold text-gray-800">Sarah Amanda</h3>
-            <p class="text-primary font-medium mb-3">CEO & Founder</p>
-            <div class="flex justify-center space-x-3">
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </div>
-          </div>
+<div class="text-center team-card">
+  <div class="mb-4">
+    <img
+      src="./assets/img/Dinda Nurdiana.jpg"
+      alt="Dinda Nurdiana"
+      class="w-32 h-32 rounded-full mx-auto object-cover border-4 border-purple-100"
+    />
+  </div>
+  <h3 class="text-xl font-bold text-gray-800">Dinda Nurdiana</h3>
+  <div class="flex justify-center space-x-3">
+    <a href="#" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="#" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition">
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </div>
+</div>
 
-          <!-- Team Member 2 -->
-          <div class="text-center team-card">
-            <div class="mb-4">
-              <img
-                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300&h=300&fit=crop"
-                alt="Rizki Pratama"
-                class="w-32 h-32 rounded-full mx-auto object-cover border-4 border-purple-100"
-              />
-            </div>
-            <h3 class="text-xl font-bold text-gray-800">Rizki Pratama</h3>
-            <p class="text-primary font-medium mb-3">CTO</p>
-            <div class="flex justify-center space-x-3">
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </div>
-          </div>
+<!-- Team Member 2 -->
+<div class="text-center team-card">
+  <div class="mb-4">
+    <img
+      src="./assets/img/Chilva Chelvinandia.jpg"
+      alt="Chilva Chelvinandia"
+      class="w-32 h-32 rounded-full mx-auto object-cover border-4 border-purple-100"
+    />
+  </div>
+  <h3 class="text-xl font-bold text-gray-800">Chilva Chelvinandia</h3>
+  <div class="flex justify-center space-x-3">
+    <a href="#" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="#" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition">
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </div>
+</div>
 
-          <!-- Team Member 3 -->
-          <div class="text-center team-card">
-            <div class="mb-4">
-              <img
-                src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=300&h=300&fit=crop"
-                alt="Dina Kartika"
-                class="w-32 h-32 rounded-full mx-auto object-cover border-4 border-purple-100"
-              />
-            </div>
-            <h3 class="text-xl font-bold text-gray-800">Dina Kartika</h3>
-            <p class="text-primary font-medium mb-3">Head of Operations</p>
-            <div class="flex justify-center space-x-3">
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </div>
-          </div>
-
-          <!-- Team Member 4 -->
-          <div class="text-center team-card">
-            <div class="mb-4">
-              <img
-                src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=300&h=300&fit=crop"
-                alt="Andi Wijaya"
-                class="w-32 h-32 rounded-full mx-auto object-cover border-4 border-purple-100"
-              />
-            </div>
-            <h3 class="text-xl font-bold text-gray-800">Andi Wijaya</h3>
-            <p class="text-primary font-medium mb-3">Marketing Director</p>
-            <div class="flex justify-center space-x-3">
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a
-                href="#"
-                class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition"
-              >
-                <i class="fab fa-linkedin"></i>
-              </a>
-            </div>
-          </div>
+<!-- Team Member 3 -->
+<div class="text-center team-card">
+  <div class="mb-4">
+    <img
+      src="./assets/img/Salsabila Septia Nada.jpg"
+      alt="Salsabila Septia Nada"
+      class="w-32 h-32 rounded-full mx-auto object-cover border-4 border-purple-100"
+    />
+  </div>
+  <h3 class="text-xl font-bold text-gray-800">Salsabila Septia Nada</h3>
+  <div class="flex justify-center space-x-3">
+    <a href="#" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition">
+      <i class="fab fa-instagram"></i>
+    </a>
+    <a href="#" class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-primary hover:text-white transition">
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </div>
+</div>
         </div>
       </div>
     </section>
