--- a/profileSeller.html
+++ b/profileSeller.html
@@ -477,7 +477,7 @@
     <footer class="bg-primary text-white py-12 mt-20">
         <!-- ... footer kamu yang lama ... -->
         <div class="max-w-7xl mx-auto px-6 text-center">
-            <p class="text-purple-200">Â© 2025 Promora â€” Platform Jastip & Promo Terpercaya</p>
+            <p class="text-purple-200">© 2025 Promora — All rights reserved</p>
         </div>
     </footer>
 
